# agentic-kg

./: .env.example  .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/: copilot-instructions.md
data/bom/: assemblies.csv  components.csv
src/agentic_kg/: __init__.py  agent.py
src/agentic_kg/agents/cypher_agent/: agent.py  variants.py
src/agentic_kg/agents/file_suggestion_agent/: agent.py  variants.py
src/agentic_kg/agents/user_intent_agent/: agent.py  variants.py
src/agentic_kg/common/: config.py  llm_catalog.py  neo4j_for_adk.py  pydantic_neo4j.py  tool_result.py
src/agentic_kg/coordinators/multi_agent/: agent.py  prompts.py
src/agentic_kg/coordinators/multi_agent/sub_agents/: __init__.py
src/agentic_kg/coordinators/multi_agent/sub_agents/file_suggestion_agent/: agent.py  variants.py
src/agentic_kg/coordinators/multi_agent/sub_agents/graph_construction_agent/: agent.py  variants.py
src/agentic_kg/coordinators/multi_agent/sub_agents/graphrag_agent/: agent.py  variants.py
src/agentic_kg/coordinators/single_agent/: agent.py  variants.py
src/agentic_kg/coordinators/single_agent/sub_agents/: __init__.py
src/agentic_kg/domain/: README.md  user_intent.py
src/agentic_kg/tools/: adk_tools.py  construction_plan_tools.py  cypher_tools.py  file_tools.py  kg_construction_tools.py  toolset.py  user_goal_tools.py  user_intent_tools.py
tests/integration/: test_neo4j_for_adk_integration.py  test_neo4j_integration.py
tests/unit/: test_cypher_tools.py  test_pydantic_neo4j.py  test_tool_result.py
(+4 files in other folders)
